--- a/contentprovider_readSMS/app/src/main/res/layout/activity_main.xml
+++ b/contentprovider_readSMS/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<!-- res/layout/activity_main.xml -->
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,7 +7,6 @@
     android:id="@+id/main"
     android:padding="16dp"
     tools:context=".MainActivity">
-
     <!-- Hiển thị tên và MSV -->
     <TextView
         android:id="@+id/tv_student_info"
@@ -24,7 +23,6 @@
         android:text="Hiển thị SMS"
         android:layout_gravity="center"
         android:layout_marginTop="16dp" />
-
     <!-- Danh sách tin nhắn SMS -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewMessages"
