--- a/contentprovider_readSMS/app/src/main/res/layout/item_message.xml
+++ b/contentprovider_readSMS/app/src/main/res/layout/item_message.xml
@@ -6,8 +6,18 @@
     android:padding="8dp">
 
     <TextView
-        android:id="@+id/tv_message"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_sender"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        android:textSize="20sp"
+        android:padding="10dp"
+        android:background="@drawable/bg1"/>
+    <TextView
+        android:id="@+id/tv_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:padding="10dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/bg2"/>
 </LinearLayout>
