--- a/bookmark/app/src/main/res/layout/activity_main.xml
+++ b/bookmark/app/src/main/res/layout/activity_main.xml
@@ -7,61 +7,16 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:id="@+id/linearlayout"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:backgroundTint="#ffffff"
-            android:scaleType="fitCenter"
-            android:src="@raw/backbtn" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="Book Mark"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginStart="130dp"
-            android:backgroundTint="#ffffff"
-            android:scaleType="fitCenter"
-            android:src="@raw/bell" />
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycleview"
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_page"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-
-        android:layout_below="@id/linearlayout"
-        app:layout_constraintBottom_toTopOf="@id/menu_bar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearlayout"
-        app:layout_constraintVertical_bias="0.013" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/menu_bar"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
     android:layout_width="match_parent"
-    android:layout_height="70dp"
+    android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:background="#8ecae6"
     app:menu="@menu/menu_bar"
